--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,19 +2,26 @@ project:
   type: website
   output-dir: docs
 
+
 website:
   title: "Yogi Ramsuratkumar Satsangs"
   navbar:
+    logo: "/ysk.png"
     right:
       - about.qmd
-      - icon: github
-        href: https://github.com/
       - icon: twitter
         href: https://twitter.com
+      - icon: youtube
+        href: https://www.youtube.com/@yogiramsuratkumarashram1918
+
+    
   search:
     location: navbar
     type: overlay
     copy-button: true
+
+
+
 format:
   html:
     theme: minty
